testing/tests/ui/unclosed-nodes.stderr
error: the previous template error derives from
 --> tests/ui/unclosed-nodes.rs:4:21
  |
4 | #[template(source = "{{ expr", ext = "txt")]
  |                     ^^^^^^^^^

error: the previous template error derives from
 --> tests/ui/unclosed-nodes.rs:8:21
  |
8 | #[template(source = "{{ expr ", ext = "txt")]
  |                     ^^^^^^^^^^

error: the previous template error derives from
  --> tests/ui/unclosed-nodes.rs:12:21
   |
12 | #[template(source = "{{ expr -", ext = "txt")]
   |                     ^^^^^^^^^^^

error: the previous template error derives from
  --> tests/ui/unclosed-nodes.rs:16:21
   |
16 | #[template(source = "{{ expr -}", ext = "txt")]
   |                     ^^^^^^^^^^^^

error: the previous template error derives from
  --> tests/ui/unclosed-nodes.rs:20:21
   |
20 | #[template(source = "{% let x", ext = "txt")]
   |                     ^^^^^^^^^^

error: the previous template error derives from
  --> tests/ui/unclosed-nodes.rs:24:21
   |
24 | #[template(source = "{% let x ", ext = "txt")]
   |                     ^^^^^^^^^^^

error: the previous template error derives from
  --> tests/ui/unclosed-nodes.rs:28:21
   |
28 | #[template(source = "{% let x -", ext = "txt")]
   |                     ^^^^^^^^^^^^

error: the previous template error derives from
  --> tests/ui/unclosed-nodes.rs:32:21
   |
32 | #[template(source = "{% let x -%", ext = "txt")]
   |                     ^^^^^^^^^^^^^

error: the previous template error derives from
  --> tests/ui/unclosed-nodes.rs:36:21
   |
36 | #[template(source = "{# comment", ext = "txt")]
   |                     ^^^^^^^^^^^^

error: the previous template error derives from
  --> tests/ui/unclosed-nodes.rs:40:21
   |
40 | #[template(source = "{# comment ", ext = "txt")]
   |                     ^^^^^^^^^^^^^

error: the previous template error derives from
  --> tests/ui/unclosed-nodes.rs:44:21
   |
44 | #[template(source = "{# comment -", ext = "txt")]
   |                     ^^^^^^^^^^^^^^

error: the previous template error derives from
  --> tests/ui/unclosed-nodes.rs:48:21
   |
48 | #[template(source = "{# comment -#", ext = "txt")]
   |                     ^^^^^^^^^^^^^^^
